# mundialPorrasF1

./: .env  .gitignore  gps_data.json  package-lock.json  requirements.txt  seed_data.py
app/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/api/: admin.py  auth.py  bingo.py  predictions.py  race_results.py  stats.py  teams.py
app/app/api/: achievements.py  admin.py  auth.py  avatars.py  bingo.py  predictions.py  scoring.py  stats.py  teams.py
app/app/core/: deps.py  security.py  utils.py
app/app/db/: db_utils.py  session.py
app/app/repositories/: achievements.py  admin.py  auth.py  avatars.py  bingo.py  grand_prix.py  predictions.py  race_results.py  scoring.py  seasons.py  standings.py  stats.py  teams.py
app/app/routers/: achievements.py  admin.py  auth.py  avatars.py  bingo.py  grand_prix.py  predictions.py  race_results.py  scoring.py  seasons.py  standings.py  stats.py  teams.py
app/app/schemas/: requests.py  responses.py  shared.py
app/app/scripts/: create_admin.py  seed_2026.py  seed_data.py  seed_data_achievements.py  seed_data_bingo.py  seed_data_bingo_preseason.py  seed_data_long_run.py  seed_data_long_run_bingo.py  seed_data_probe_achievements.py  seed_datav2.py
app/app/services/: achievements.py  achievements_service.py  admin.py  auth.py  avatars.py  bingo.py  email.py  f1_sync.py  grand_prix.py  predictions.py  race_results.py  scoring.py  seasons.py  standings.py  stats.py  teams.py
app/app/utils/: achievements.py  f1_sync.py  scoring.py
app/db/models/: _all.py  achievement.py  season.py  (+3 more)
app/schemas/: user.py
(+47 files in other folders)
